fix layout issue with edit form
a form with no errors displayed an empty validation area, which still had margin.

--- a/Formic/Styles/form.scss
+++ b/Formic/Styles/form.scss
@@ -48,6 +48,9 @@
     float:right;
 }
 
+.validation-summary-valid {
+    display:none;
+}
 .validation-summary-errors {
     ul {
         padding: 0;
